syntax = "proto3";

package upvote;

option go_package = "klever/";

message Message {
    string body = 1;
}

service UpVoteService {
    rpc UpVote(Message) returns (Message) {}
}

